--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -1,6 +1,5 @@
 <mat-card class="settings-card">
   <mat-card-content>
-
     <div class="content-small">
       <!-- <mat-card>
     <mat-card-header>
@@ -29,15 +28,15 @@
 
       <h3>What is Nostria?</h3>
       <p>
-        Nostria is a client for the Nostr protocol, which is a decentralized social
-        network protocol. It allows users to communicate and share information
-        without relying on a central server.
+        Nostria is a client for the Nostr protocol, which is a decentralized
+        social network protocol. It allows users to communicate and share
+        information without relying on a central server.
       </p>
       <p>
         Nostria implements the usage of the Nostr protocol to ensure maximum
         decentralization and global scalability, without compromising on user
-        experience. The client is designed to be fast, responsive, and easy to use,
-        with a focus on providing a great user experience.
+        experience. The client is designed to be fast, responsive, and easy to
+        use, with a focus on providing a great user experience.
       </p>
 
       <p>
@@ -50,8 +49,12 @@
       <p>Nostria is also accessible as desktop app:</p>
       <ul>
         <li>
-          <a href="https://github.com/nostria-app/nostria/releases" target="_blank"
-            rel="noopener noreferrer">Downloads</a>
+          <a
+            href="https://github.com/nostria-app/nostria/releases"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Downloads</a
+          >
         </li>
       </ul>
 
@@ -59,7 +62,12 @@
       <p>Visit our website for more information, documentation, and support.</p>
       <ul>
         <li>
-          <a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer">Nostria Website</a>
+          <a
+            href="https://www.nostria.app"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Nostria Website</a
+          >
         </li>
       </ul>
 
@@ -67,19 +75,31 @@
         <h3>Useful Links</h3>
         <mat-list>
           <mat-list-item>
-            <a href="https://github.com/nostria-app/nostria" target="_blank" rel="noopener noreferrer">
+            <a
+              href="https://github.com/nostria-app/nostria"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <mat-icon>code</mat-icon>
               GitHub Repository
             </a>
           </mat-list-item>
           <mat-list-item>
-            <a href="https://nostr.com" target="_blank" rel="noopener noreferrer">
+            <a
+              href="https://nostr.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <mat-icon>info</mat-icon>
               Nostr Protocol
             </a>
           </mat-list-item>
           <mat-list-item>
-            <a href="https://github.com/nostria-app/nostria/issues" target="_blank" rel="noopener noreferrer">
+            <a
+              href="https://github.com/nostria-app/nostria/issues"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <mat-icon>bug_report</mat-icon>
               Report Issues
             </a>
@@ -90,7 +110,5 @@
       <!-- </mat-card-content>
   </mat-card> -->
     </div>
-
-
   </mat-card-content>
 </mat-card>
