--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,9 @@
 
   <!-- Loading overlay -->
   @if (appState.isLoading()) {
-  <app-loading-overlay [message]="appState.loadingMessage()"></app-loading-overlay>
+  <app-loading-overlay
+    [message]="appState.loadingMessage()"
+  ></app-loading-overlay>
   }
 
   <!-- Success overlay with checkmark -->
@@ -20,7 +22,11 @@
   <!-- Top toolbar - now outside and above the sidenav container -->
   <mat-toolbar color="primary" class="app-toolbar no-print">
     @if (!layout.search()) {
-    <button mat-icon-button (click)="toggleSidenav()" aria-label="Toggle sidenav">
+    <button
+      mat-icon-button
+      (click)="toggleSidenav()"
+      aria-label="Toggle sidenav"
+    >
       <mat-icon>menu</mat-icon>
     </button>
     } @if (!layout.search()) {
@@ -33,8 +39,14 @@
     <span class="toolbar-spacer">
       @if (layout.search()) {
       <div class="search-container">
-        <input type="search" class="search-input" [(ngModel)]="layout.searchInput"
-          (input)="layout.onSearchInput($event)" (keydown)="onSearchInputKeyDown($event)" placeholder="Search..." />
+        <input
+          type="search"
+          class="search-input"
+          [(ngModel)]="layout.searchInput"
+          (input)="layout.onSearchInput($event)"
+          (keydown)="onSearchInputKeyDown($event)"
+          placeholder="Search..."
+        />
         <app-search-results></app-search-results>
       </div>
       }
@@ -54,22 +66,39 @@
       }
     </button>
     @if (pwaUpdateService.updateAvailable()) {
-    <button mat-icon-button class="update-button" (click)="pwaUpdateService.updateApplication()"
-      matTooltip="Update ready!" aria-label="Update application">
+    <button
+      mat-icon-button
+      class="update-button"
+      (click)="pwaUpdateService.updateApplication()"
+      matTooltip="Update ready!"
+      aria-label="Update application"
+    >
       <mat-icon class="update-icon">system_update</mat-icon>
     </button>
     } @if (app.authenticated() &&
     accountState.profileProcessingState().isProcessing) {
-    <button mat-icon-button class="profile-cache-button"
+    <button
+      mat-icon-button
+      class="profile-cache-button"
       [matTooltip]="'Caching profiles: ' + accountState.processingProgress() + '% (' + accountState.profileProcessingState().processed + '/' + accountState.profileProcessingState().total + ')'"
-      aria-label="Profile caching progress">
+      aria-label="Profile caching progress"
+    >
       <mat-icon class="spinning-icon">cached</mat-icon>
-      <span class="progress-badge">{{ accountState.processingProgress() }}%</span>
+      <span class="progress-badge"
+        >{{ accountState.processingProgress() }}%</span
+      >
     </button>
     } @if (app.authenticated()) {
-    <button class="notification-toolbar" mat-icon-button [matMenuTriggerFor]="menuNotifications">
-      <mat-icon [class.pulsing-icon]="hasActivePendingNotifications()"
-        [matBadge]="unreadNotificationsCount()">notifications</mat-icon>
+    <button
+      class="notification-toolbar"
+      mat-icon-button
+      [matMenuTriggerFor]="menuNotifications"
+    >
+      <mat-icon
+        [class.pulsing-icon]="hasActivePendingNotifications()"
+        [matBadge]="unreadNotificationsCount()"
+        >notifications</mat-icon
+      >
     </button>
     }
 
@@ -166,10 +195,19 @@
       </button>
     </mat-menu>
 
-    <button mat-icon-button [class.profile-button-picture]="accountState.profile()?.data?.picture"
-      (click)="toggleProfileSidenav()" aria-label="Toggle profile" class="profile-button">
+    <button
+      mat-icon-button
+      [class.profile-button-picture]="accountState.profile()?.data?.picture"
+      (click)="toggleProfileSidenav()"
+      aria-label="Toggle profile"
+      class="profile-button"
+    >
       @if (accountState.profile()?.data?.picture) {
-      <img [src]="accountState.profile()?.data?.picture" class="profile-button-avatar" alt="Profile picture" />
+      <img
+        [src]="accountState.profile()?.data?.picture"
+        class="profile-button-avatar"
+        alt="Profile picture"
+      />
       } @else { @if(app.authenticated()) {
       <mat-icon>account_circle</mat-icon>
       } @else {
@@ -188,7 +226,11 @@
       <button mat-icon-button class="dismiss-button" (click)="app.reload()">
         <mat-icon>refresh</mat-icon>
       </button>
-      <button mat-icon-button class="dismiss-button" (click)="appState.dismissOffline()">
+      <button
+        mat-icon-button
+        class="dismiss-button"
+        (click)="appState.dismissOffline()"
+      >
         <mat-icon>close</mat-icon>
       </button>
     </div>
@@ -197,14 +239,23 @@
   <!-- Sidenav container now below the toolbar -->
   <mat-sidenav-container class="sidenav-container" [autosize]="true">
     <!-- Side navigation -->
-    <mat-sidenav #sidenav class="sidenav no-print"
-      [ngClass]="{ 'sidenav-labels': displayLabels(), 'sidenav-small': !displayLabels()  }" [opened]="opened()"
-      [mode]="layout.isHandset() ? 'over' : 'side'" [fixedInViewport]="false">
+    <mat-sidenav
+      #sidenav
+      class="sidenav no-print"
+      [ngClass]="{ 'sidenav-labels': displayLabels(), 'sidenav-small': !displayLabels()  }"
+      [opened]="opened()"
+      [mode]="layout.isHandset() ? 'over' : 'side'"
+      [fixedInViewport]="false"
+    >
       <mat-nav-list>
         @for (item of navigationItems(); track $index) {
-        <a mat-list-item [routerLink]="item.action ? undefined : [item.path]" routerLinkActive="active-link"
+        <a
+          mat-list-item
+          [routerLink]="item.action ? undefined : [item.path]"
+          routerLinkActive="active-link"
           [routerLinkActiveOptions]="{exact: true}"
-          (click)="item.action ? item.action() : (layout.isHandset() ? toggleSidenav() : null)">
+          (click)="item.action ? item.action() : (layout.isHandset() ? toggleSidenav() : null)"
+        >
           <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
           @if(displayLabels()) {
           <span class="nav-label">{{item.label}}</span>
@@ -229,29 +280,49 @@
       </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav #profileSidenav position="end" class="profile-sidenav" mode="over" [fixedInViewport]="true"
-      [fixedTopGap]="0" [fixedBottomGap]="0" [disableClose]="false">
+    <mat-sidenav
+      #profileSidenav
+      position="end"
+      class="profile-sidenav"
+      mode="over"
+      [fixedInViewport]="true"
+      [fixedTopGap]="0"
+      [fixedBottomGap]="0"
+      [disableClose]="false"
+    >
       <!-- <mat-toolbar>
         <span>Profile</span>
         <span class="toolbar-spacer"></span>
         
       </mat-toolbar> -->
       <div class="profile-content">
-        <button class="theme-button" mat-icon-button (click)="themeService.toggleDarkMode()">
+        <button
+          class="theme-button"
+          mat-icon-button
+          (click)="themeService.toggleDarkMode()"
+        >
           @if (themeService.darkMode()) {
           <mat-icon>dark_mode</mat-icon>
           } @else {
           <mat-icon>light_mode</mat-icon>
           }
         </button>
-        <button class="close-button" mat-icon-button (click)="toggleProfileSidenav()">
+        <button
+          class="close-button"
+          mat-icon-button
+          (click)="toggleProfileSidenav()"
+        >
           <mat-icon>close</mat-icon>
         </button>
         <div class="profile-header">
           @if (accountState.profile(); as metadata) { @if
           (metadata?.data?.picture) {
           <div class="profile-avatar">
-            <img [src]="metadata.data.picture" alt="Profile picture" class="avatar-image" />
+            <img
+              [src]="metadata.data.picture"
+              alt="Profile picture"
+              class="avatar-image"
+            />
           </div>
           } @else {
           <div class="profile-avatar">
@@ -292,11 +363,19 @@
 
         <mat-nav-list>
           @if(app.authenticated()) {
-          <a mat-list-item [routerLink]="accountState.profilePath()" (click)="toggleProfileSidenav()">
+          <a
+            mat-list-item
+            [routerLink]="accountState.profilePath()"
+            (click)="toggleProfileSidenav()"
+          >
             <mat-icon matListItemIcon>person</mat-icon>
             <span>My Profile</span>
           </a>
-          <a mat-list-item routerLink="/credentials" (click)="toggleProfileSidenav()">
+          <a
+            mat-list-item
+            routerLink="/credentials"
+            (click)="toggleProfileSidenav()"
+          >
             <mat-icon matListItemIcon>key</mat-icon>
             <span>Credentials</span>
           </a>
@@ -309,7 +388,11 @@
             <mat-icon matListItemIcon>person_add</mat-icon>
             <span>Add account</span>
           </a>
-          <a mat-list-item routerLink="/accounts" (click)="toggleProfileSidenav()">
+          <a
+            mat-list-item
+            routerLink="/accounts"
+            (click)="toggleProfileSidenav()"
+          >
             <mat-icon matListItemIcon>manage_accounts</mat-icon>
             <span>Manage accounts</span>
           </a>
@@ -325,10 +408,18 @@
           @for (account of accountState.accounts(); track account.pubkey) { @if
           (account.pubkey !== accountState.account()?.pubkey) {
           @if(accountState.getAccountProfile(account.pubkey); as metadata) {
-          <a mat-list-item (click)="switchAccount(account.pubkey); toggleProfileSidenav();" class="account-item">
+          <a
+            mat-list-item
+            (click)="switchAccount(account.pubkey); toggleProfileSidenav();"
+            class="account-item"
+          >
             @if (metadata.data?.picture; as account) {
             <div class="account-avatar" matListItemIcon>
-              <img [src]="metadata?.data?.picture" alt="Profile picture" class="avatar-image" />
+              <img
+                [src]="metadata?.data?.picture"
+                alt="Profile picture"
+                class="avatar-image"
+              />
             </div>
             } @else {
             <div class="account-avatar" matListItemIcon>
@@ -344,7 +435,11 @@
             </span>
           </a>
           } @else {
-          <a mat-list-item (click)="switchAccount(account.pubkey); toggleProfileSidenav();" class="account-item">
+          <a
+            mat-list-item
+            (click)="switchAccount(account.pubkey); toggleProfileSidenav();"
+            class="account-item"
+          >
             <div class="account-avatar" matListItemIcon>
               <mat-icon>account_circle</mat-icon>
             </div>
@@ -399,14 +494,24 @@
     </a>
     } -->
 
-    <a mat-button class="mobile-nav-button" [routerLink]="['/']" routerLinkActive="active-link"
-      [routerLinkActiveOptions]="{exact: true}">
+    <a
+      mat-button
+      class="mobile-nav-button"
+      [routerLink]="['/']"
+      routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: true}"
+    >
       <mat-icon>home</mat-icon>
       <div class="mobile-nav-label">Home</div>
     </a>
 
-    <a mat-button class="mobile-nav-button" [routerLink]="['/articles']" routerLinkActive="active-link"
-      [routerLinkActiveOptions]="{exact: true}">
+    <a
+      mat-button
+      class="mobile-nav-button"
+      [routerLink]="['/articles']"
+      routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: true}"
+    >
       <mat-icon>article</mat-icon>
       <div class="mobile-nav-label">Articles</div>
     </a>
@@ -414,8 +519,13 @@
     <!-- FAB button in the middle with circular cut-out -->
     @if (app.authenticated()) {
     <div class="fab-container">
-      <button mat-mini-fab color="primary" class="create-fab" aria-label="Create new content"
-        (click)="openCreateOptions()">
+      <button
+        mat-mini-fab
+        color="primary"
+        class="create-fab"
+        aria-label="Create new content"
+        (click)="openCreateOptions()"
+      >
         <mat-icon>add</mat-icon>
       </button>
     </div>
@@ -431,26 +541,46 @@
     } -->
 
     @if (app.authenticated()) {
-    <a mat-button class="mobile-nav-button" [routerLink]="['/messages']" routerLinkActive="active-link"
-      [routerLinkActiveOptions]="{exact: true}">
+    <a
+      mat-button
+      class="mobile-nav-button"
+      [routerLink]="['/messages']"
+      routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: true}"
+    >
       <mat-icon>mail</mat-icon>
       <div class="mobile-nav-label">Messages</div>
     </a>
 
-    <a mat-button class="mobile-nav-button" [routerLink]="['/p', accountState.pubkey()]" routerLinkActive="active-link"
-      [routerLinkActiveOptions]="{exact: false}">
+    <a
+      mat-button
+      class="mobile-nav-button"
+      [routerLink]="['/p', accountState.pubkey()]"
+      routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: false}"
+    >
       <mat-icon>account_circle</mat-icon>
       <div class="mobile-nav-label">Profile</div>
     </a>
     } @else {
-    <a mat-button class="mobile-nav-button" [routerLink]="['/settings']" routerLinkActive="active-link"
-      [routerLinkActiveOptions]="{exact: true}">
+    <a
+      mat-button
+      class="mobile-nav-button"
+      [routerLink]="['/settings']"
+      routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: true}"
+    >
       <mat-icon>settings</mat-icon>
       <div class="mobile-nav-label">Settings</div>
     </a>
 
-    <a mat-button class="mobile-nav-button" (click)="addAccount()" routerLinkActive="active-link"
-      [routerLinkActiveOptions]="{exact: false}">
+    <a
+      mat-button
+      class="mobile-nav-button"
+      (click)="addAccount()"
+      routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: false}"
+    >
       <mat-icon>person_add</mat-icon>
       <div class="mobile-nav-label">Add account</div>
     </a>
@@ -463,8 +593,16 @@
 <app-navigation-context-menu></app-navigation-context-menu>
 
 <!-- Global fullscreen video container -->
-<div id="global-fullscreen-container" class="global-fullscreen-video" style="display: none">
-  <button class="fullscreen-minimize-button" (click)="exitFullscreen()" aria-label="Exit fullscreen">
+<div
+  id="global-fullscreen-container"
+  class="global-fullscreen-video"
+  style="display: none"
+>
+  <button
+    class="fullscreen-minimize-button"
+    (click)="exitFullscreen()"
+    aria-label="Exit fullscreen"
+  >
     <mat-icon>close</mat-icon>
   </button>
 </div>
