--- a/src/app/components/link/link.html
+++ b/src/app/components/link/link.html
@@ -1,7 +1,14 @@
 @if (link()) {
-<a (click)="navigateToEvent()" (keydown.enter)="navigateToEvent()" (keydown.space)="navigateToEvent()"
-  matTooltipPosition="below" [matTooltip]="event().created_at * 1000 | date: 'medium'" class="app-link" tabindex="0"
-  role="link">
+<a
+  (click)="navigateToEvent()"
+  (keydown.enter)="navigateToEvent()"
+  (keydown.space)="navigateToEvent()"
+  matTooltipPosition="below"
+  [matTooltip]="event().created_at * 1000 | date: 'medium'"
+  class="app-link"
+  tabindex="0"
+  role="link"
+>
   {{ event().created_at | ago }}
 </a>
 }
