--- a/src/app/pages/settings/privacy-settings/privacy-settings.component.html
+++ b/src/app/pages/settings/privacy-settings/privacy-settings.component.html
@@ -1,26 +1,35 @@
 <div class="content-medium">
-
   <h2>Privacy and Safety Settings</h2>
 
   <section class="sharing-section">
     <h3>Image Cache Service</h3>
     <div class="settings-option">
-      <mat-checkbox [checked]="settingsService.settings().imageCacheEnabled" (change)="toggleImageCache()">
+      <mat-checkbox
+        [checked]="settingsService.settings().imageCacheEnabled"
+        (change)="toggleImageCache()"
+      >
         Enable image cache
       </mat-checkbox>
-      <app-info-tooltip [content]="imageCacheInfoContent"
-        ariaLabel="Learn about image cache service"></app-info-tooltip>
+      <app-info-tooltip
+        [content]="imageCacheInfoContent"
+        ariaLabel="Learn about image cache service"
+      ></app-info-tooltip>
     </div>
   </section>
 
   <section class="sharing-section">
     <h3>Social Sharing Options</h3>
     <div class="settings-option">
-      <mat-checkbox [checked]="settingsService.settings().socialSharingPreview" (change)="toggleSocialSharingPreview()">
+      <mat-checkbox
+        [checked]="settingsService.settings().socialSharingPreview"
+        (change)="toggleSocialSharingPreview()"
+      >
         Enable social sharing preview
       </mat-checkbox>
-      <app-info-tooltip [content]="socialSharingInfoContent"
-        ariaLabel="Learn about social sharing preview"></app-info-tooltip>
+      <app-info-tooltip
+        [content]="socialSharingInfoContent"
+        ariaLabel="Learn about social sharing preview"
+      ></app-info-tooltip>
     </div>
   </section>
 
@@ -30,29 +39,34 @@
     <h3>Muted Accounts</h3>
     <div class="muted-section">
       @if (mutedAccounts().length > 0) {
-      <mat-list>
-        @for (pubkey of mutedAccounts(); track pubkey) {
-        <mat-list-item>
-          <span matListItemTitle>
-            <app-user-profile [pubkey]="pubkey"> </app-user-profile>
-          </span>
-          <button mat-icon-button color="warn" (click)="removeMutedItem('account', pubkey)" matListItemMeta>
-            <mat-icon>clear</mat-icon>
-          </button>
-        </mat-list-item>
+        <mat-list>
+          @for (pubkey of mutedAccounts(); track pubkey) {
+            <mat-list-item>
+              <span matListItemTitle>
+                <app-user-profile [pubkey]="pubkey"> </app-user-profile>
+              </span>
+              <button
+                mat-icon-button
+                color="warn"
+                (click)="removeMutedItem('account', pubkey)"
+                matListItemMeta
+              >
+                <mat-icon>clear</mat-icon>
+              </button>
+            </mat-list-item>
 
-        <!-- <mat-list-item>
+            <!-- <mat-list-item>
           <span matListItemTitle>{{ pubkey }}</span>
           <button mat-icon-button color="warn" (click)="removeMutedItem('account', pubkey)" matListItemMeta>
             <mat-icon>clear</mat-icon>
           </button>
         </mat-list-item> -->
-        <!-- <mat-divider>
+            <!-- <mat-divider>
         </mat-divider> -->
-        }
-      </mat-list>
+          }
+        </mat-list>
       } @else {
-      <p class="empty-state">No muted accounts.</p>
+        <p class="empty-state">No muted accounts.</p>
       }
     </div>
   </section>
@@ -61,19 +75,24 @@
     <h3>Muted Words</h3>
     <div class="muted-section">
       @if (mutedWords().length > 0) {
-      <mat-list>
-        @for (word of mutedWords(); track word) {
-        <mat-list-item>
-          <span matListItemTitle>{{ word }}</span>
-          <button mat-icon-button color="warn" (click)="removeMutedItem('word', word)" matListItemMeta>
-            <mat-icon>clear</mat-icon>
-          </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        }
-      </mat-list>
+        <mat-list>
+          @for (word of mutedWords(); track word) {
+            <mat-list-item>
+              <span matListItemTitle>{{ word }}</span>
+              <button
+                mat-icon-button
+                color="warn"
+                (click)="removeMutedItem('word', word)"
+                matListItemMeta
+              >
+                <mat-icon>clear</mat-icon>
+              </button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+          }
+        </mat-list>
       } @else {
-      <p class="empty-state">No muted words.</p>
+        <p class="empty-state">No muted words.</p>
       }
     </div>
   </section>
@@ -82,19 +101,24 @@
     <h3>Muted Tags</h3>
     <div class="muted-section">
       @if (mutedTags().length > 0) {
-      <mat-list>
-        @for (tag of mutedTags(); track tag) {
-        <mat-list-item>
-          <span matListItemTitle>#{{ tag }}</span>
-          <button mat-icon-button color="warn" (click)="removeMutedItem('tag', tag)" matListItemMeta>
-            <mat-icon>clear</mat-icon>
-          </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        }
-      </mat-list>
+        <mat-list>
+          @for (tag of mutedTags(); track tag) {
+            <mat-list-item>
+              <span matListItemTitle>#{{ tag }}</span>
+              <button
+                mat-icon-button
+                color="warn"
+                (click)="removeMutedItem('tag', tag)"
+                matListItemMeta
+              >
+                <mat-icon>clear</mat-icon>
+              </button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+          }
+        </mat-list>
       } @else {
-      <p class="empty-state">No muted tags.</p>
+        <p class="empty-state">No muted tags.</p>
       }
     </div>
   </section>
@@ -103,19 +127,24 @@
     <h3>Muted Threads</h3>
     <div class="muted-section">
       @if (mutedThreads().length > 0) {
-      <mat-list>
-        @for (thread of mutedThreads(); track thread) {
-        <mat-list-item>
-          <span matListItemTitle>{{ thread }}</span>
-          <button mat-icon-button color="warn" (click)="removeMutedItem('thread', thread)" matListItemMeta>
-            <mat-icon>clear</mat-icon>
-          </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        }
-      </mat-list>
+        <mat-list>
+          @for (thread of mutedThreads(); track thread) {
+            <mat-list-item>
+              <span matListItemTitle>{{ thread }}</span>
+              <button
+                mat-icon-button
+                color="warn"
+                (click)="removeMutedItem('thread', thread)"
+                matListItemMeta
+              >
+                <mat-icon>clear</mat-icon>
+              </button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+          }
+        </mat-list>
       } @else {
-      <p class="empty-state">No muted threads.</p>
+        <p class="empty-state">No muted threads.</p>
       }
     </div>
   </section>
@@ -136,8 +165,8 @@
         service to improve loading times.
       </p>
       <p>
-        Disable if you want to ensure images are always loaded directly from
-        the source. Disabling this will increase bandwidth usage.
+        Disable if you want to ensure images are always loaded directly from the
+        source. Disabling this will increase bandwidth usage.
       </p>
     </mat-card-content>
   </ng-template>
