--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,13 +17,17 @@ html {
   // --mat-subtitle-text-color: rgba(0, 0, 0, 0.7);
   // --mat-card-container-color: white;
 
-  @include mat.theme((color: (theme-type: light,
+  @include mat.theme(
+    (
+      color: (
+        theme-type: light,
         primary: nostria-theme.$primary-palette,
         tertiary: nostria-theme.$tertiary-palette,
       ),
       typography: Roboto,
       density: 0,
-    ));
+    )
+  );
 }
 
 .dark {
@@ -42,10 +46,14 @@ html {
   // --mat-subtitle-text-color: rgba(255, 255, 255, 0.7);
   // --mat-card-container-color: #424242;
 
-  @include mat.theme((color: (theme-type: dark,
+  @include mat.theme(
+    (
+      color: (
+        theme-type: dark,
         primary: nostria-theme.$primary-palette,
       ),
-    ));
+    )
+  );
 }
 
 // Global styles
