--- a/src/app/pages/event/event.component.scss
+++ b/src/app/pages/event/event.component.scss
@@ -4,6 +4,19 @@
   margin: 0 auto;
 }
 
+.thread-loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  padding: 48px 32px;
+  margin: 16px 0;
+}
+
+.loading-text {
+  margin: 0;
+}
+
 .parent-events {
   margin-bottom: 2rem;
 
