--- a/src/app/pages/profile/profile-relays/profile-relays.component.html
+++ b/src/app/pages/profile/profile-relays/profile-relays.component.html
@@ -32,7 +32,7 @@
     (selectedIndexChange)="onTabChanged($event)" animationDuration="300ms">
     <mat-tab class="following-tab" label="Relays"> -->
   <div class="following-content">
-    @if (profileState.relay?.relayUrls?.length === 0) {
+    @if (profileState.relay?.getRelayUrls()?.length === 0) {
       <div class="empty-list">
         <mat-icon>people_outline</mat-icon>
         <p>This user does not have any relays.</p>
@@ -45,7 +45,7 @@
         [maxBufferPx]="maxBufferPx"
       >
         <mat-list class="full-width-list">
-          @for (url of profileState.relay?.relayUrls; track url) {
+          @for (url of profileState.relay?.getRelayUrls(); track url) {
             {{ url }}<br />
             <!-- <app-user-profile [pubkey]="user.npub"></app-user-profile> -->
           }
