--- a/src/app/pages/settings/relays/relays.component.html
+++ b/src/app/pages/settings/relays/relays.component.html
@@ -52,7 +52,7 @@
               </div>
             } @else {
               <mat-list>
-                @for (relay of relays(); track relay.url) {
+                <!-- @for (relay of relays(); track relay.url) {
                   <mat-list-item>
                     <div class="relay-item-container">
                       <div class="status-icon">
@@ -86,7 +86,7 @@
                   @if (!$last) {
                     <mat-divider></mat-divider>
                   }
-                }
+                } -->
               </mat-list>
             }
           </mat-card-content>
@@ -225,7 +225,7 @@
             >
           </mat-card-header>
           <mat-card-content>
-            @if (relay.discoveryRelays.length === 0) {
+            <!-- @if (relay.discoveryRelays.length === 0) {
               <div class="text-center py-8 text-gray-500">
                 <p>You don't have any bootstrap relays configured.</p>
                 <p>Add a bootstrap relay using the input above.</p>
@@ -266,7 +266,7 @@
                   }
                 }
               </mat-list>
-            }
+            } -->
           </mat-card-content>
         </mat-card>
       </div>
